# neurosymbolic-diffusion

./: .gitignore  README.md  main.py  pyproject.toml
expressive/: args.py  util.py
expressive/experiments/: stats.py
expressive/experiments/mnist_op/: MNISTLog.py  absorbing_mnist.py  data.py  eval.py  mnistop.py  models.py  neural_model.py  view_data.py
expressive/experiments/path_planning/: absorbing_path.py  dijkstra.py  eval.py  path_planning.py  perception.py
expressive/experiments/rsbench/: README.md  eval_nesydiff.py  nesydiffusion.py  requirements.txt  rsbench.py  rsbenchmodel.py
expressive/experiments/rsbench/backbones/: addmnist_single.py  boia_linear.py  mnistcnn.py
expressive/experiments/rsbench/datasets/: __init__.py  boia.py  halfmnist.py  shortcutmnist.py
expressive/experiments/rsbench/datasets/utils/: base_dataset.py  xor_creation.py
expressive/experiments/rsbench/models/: __init__.py  mnistcbm.py  mnistnn.py  sddoiadpl.py
expressive/experiments/rsbench/models/utils/: deepproblog_modules.py  utils_problog.py
expressive/experiments/rsbench/utils/: conf.py  metrics.py
expressive/methods/: base_model.py  cond_model.py  logger.py  simple_nesy_diff.py
expressive/models/: diffusion_model.py  dit.py
expressive/notebook/: evaluate.ipynb
