[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expressive"
version = "0.1.0"
description = "Neurosymbolic Diffusion"
authors = [
    {name = "hemile", email = "Emile.van.Krieken@ed.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.13"
dependencies = [
    "numpy>=1.25.2",
    "torch>=2.5.1",
    "typed-argument-parser>=1.10.1",
    "wandb>=0.19.0",
    "torchvision>=0.20.1",
    "timm>=1.0.12",
    "ray>=2.40.0",
    "pandas>=2.2.3",
    "matplotlib>=3.9.4",
    "joblib>=1.4.2",
    "sympy>=1.13.1",
    "tqdm>=4.67.1",
    "mathutils>=3.3.0",
    "problog>=2.2.7",
    "ltntorch>=1.0.2",
    "scikit-learn>=1.6.1",
]

[tool.setuptools]
packages = ["expressive"]
